%% NUST University Database - Entity Relationship Diagram
erDiagram
    school ||--|{ faculty : "employs"
    school ||--|{ program : "offers"
    school ||--|{ course  : "owns"

    program ||--o{ student : "registers"
    program ||--|{ application : "receives"
    program ||--|{ program_course : "requires"

    course  ||--|{ program_course : "mapped_to"
    course  ||--o{ section : "offered_as"
    course  ||--o{ prerequisite : "has_prereq"
    course  ||--o{ prerequisite : "is_prereq_of"

    term      ||--|{ section : "contains"
    term      ||--|{ application : "intake_for"
    classroom ||--o{ section : "hosts"
    faculty   ||--o{ section : "teaches"

    student ||--|{ enrollment : "enrolls_in"
    section ||--|{ enrollment : "has_students"

    applicant  ||--|{ application : "submits"
    applicant  ||--|{ test_attempt : "attempts"
    entry_test ||--|{ test_attempt : "taken_as"
    applicant  ||--o| student : "becomes"

    application ||--o| offer : "yields"

    school {
        VARCHAR school_id PK
        VARCHAR school_name
        VARCHAR abbreviation
        SMALLINT established_year
    }
    faculty {
        VARCHAR faculty_id PK
        VARCHAR school_id FK
        VARCHAR full_name
        VARCHAR email
        VARCHAR designation
    }
    program {
        VARCHAR program_id PK
        VARCHAR school_id FK
        VARCHAR program_name
        ENUM    degree_type
        TINYINT total_semesters
        SMALLINT total_credits
        SMALLINT total_seats
    }
    course {
        VARCHAR course_code PK
        VARCHAR school_id FK
        VARCHAR course_title
        ENUM    course_type
        TINYINT credit_hours
        TINYINT contact_hours
    }
    prerequisite {
        VARCHAR course_code PK
        VARCHAR prereq_course_code PK
    }
    program_course {
        VARCHAR program_id PK
        VARCHAR course_code PK
        TINYINT recommended_semester
        BOOLEAN is_core
    }
    term {
        VARCHAR term_id PK
        ENUM    term_name
        SMALLINT academic_year
        DATE    start_date
        DATE    end_date
    }
    classroom {
        VARCHAR classroom_id PK
        VARCHAR building
        VARCHAR room_number
        SMALLINT capacity
    }
    student {
        VARCHAR student_id PK
        VARCHAR program_id FK
        VARCHAR applicant_id FK
        VARCHAR full_name
        VARCHAR email
        TINYINT current_semester
        DATE    enrollment_date
    }
    section {
        VARCHAR section_id PK
        VARCHAR course_code FK
        VARCHAR term_id FK
        VARCHAR classroom_id FK
        VARCHAR faculty_id FK
        VARCHAR section_label
    }
    enrollment {
        VARCHAR student_id PK
        VARCHAR section_id PK
        DECIMAL attendance_percentage
        ENUM    grade
    }
    applicant {
        VARCHAR applicant_id PK
        VARCHAR full_name
        VARCHAR cnic
        VARCHAR email
        ENUM    high_school_board
        DECIMAL high_school_score
        DECIMAL best_test_score
    }
    entry_test {
        VARCHAR test_id PK
        ENUM    test_type
        DATE    test_date
        SMALLINT total_marks
    }
    test_attempt {
        VARCHAR applicant_id PK
        VARCHAR test_id PK
        DECIMAL score
    }
    application {
        VARCHAR application_id PK
        VARCHAR applicant_id FK
        VARCHAR program_id FK
        VARCHAR term_id FK
        DECIMAL snapshot_hs_score
        DECIMAL snapshot_best_test
        DECIMAL aggregate_score
        DATE    submission_date
        ENUM    status
    }
    offer {
        VARCHAR offer_id PK
        VARCHAR application_id FK
        DATE    issue_date
        DATE    expiry_date
        ENUM    status
    }
